--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>My GitHub Pages Site</title>
+<title>Mobile Ready Screen-Set Implementation Example</title>
+<meta name="viewport" content="width=device-width">
+<SCRIPT type="text/javascript" lang="javascript" src="https://cdns.us1.gigya.com/js/gigya.js?apikey=4_9yIxImuq8NEAPqW7ys8hRQ"></SCRIPT>
 </head>
 <body>
-<h1>Hello SAP Customer Data Cloud!</h1>
-<p>Welcome to my GitHub Pages site!</p>
+<a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a>
 </body>
 </html>
