--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <SCRIPT type="text/javascript" lang="javascript" src="https://cdns.us1.gigya.com/js/gigya.js?apikey=4_9yIxImuq8NEAPqW7ys8hRQ"></SCRIPT>
 </head>
 <body>
-<a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a>
+<a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin', startScreen:'gigya-register-screen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin'});">Login</a>  
 </body>
